[gd_scene load_steps=4 format=2]

[ext_resource path="res://items/weapons/lama/Lama.gd" type="Script" id=1]
[ext_resource path="res://items/attack_mid_mid.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="Lama" type="Area2D"]
collision_layer = 0
collision_mask = 128
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 1, -26 )
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, -26 )
polygon = PoolVector2Array( 0, 26, -16, -16, 16, -16 )

[node name="Cd" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Uptime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
[connection signal="body_entered" from="." to="." method="_on_Lama_body_entered"]
[connection signal="timeout" from="Cd" to="." method="_on_cd_timeout"]
[connection signal="timeout" from="Uptime" to="." method="_on_uptime_timeout"]
